--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react-dom": "^19.2.3",
     "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "next": "^16.1.1"
+    "react": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
